--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,15 @@
     color: #97c93e !important;
 }
 
+.btn-platzi {
+    background-color: #97c93e;
+    color: white !important;
+}
+
+.btn-platzi:hover {
+    background-color: #82ad36;
+}
+
 /* Header style */
 #header img {
     width: 80px;
@@ -13,6 +22,26 @@
     object-fit: cover;
     filter: grayscale(70%);
 }
+
+#carousel {
+    position: relative;
+}
+
+#carousel .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+}
+
+#carousel .overlay .container,
+#carousel .overlay .row {
+    height: 100%;
+}
+
 
 /* Footer style */
 #footer {
