Update project: scroll and modal

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
 }
 
 /* Header style */
-#header img {
+#header-container img {
     width: 80px;
 }
 
@@ -40,6 +40,17 @@
 #carousel .overlay .container,
 #carousel .overlay .row {
     height: 100%;
+}
+
+/* date-time */
+
+#date-time {
+    background-color: #343a40;
+    color: white;
+}
+
+#date-time img {
+    max-width: 100%;
 }
 
 
